@@ -22,6 +22,7 @@ namespace ttHMultilepton {
     float Mll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1];
     float Ptll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1];
     float DRll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1];
+    char matchDLTll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1];
     float Mlll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-2];
     float Mllll[LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-1][LEPTON_ARR_SIZE-2][LEPTON_ARR_SIZE-3];
     float best_Z_Mll, best_Z_other_Mll;
